################################################################################
#
# Doc Makefile.am
#
# $Revision: 8 $
# $Date: 2009-02-25 15:08:51 -0700 (Wed, 25 Feb 2009) $
# $Author: bergen $
#
################################################################################

#-------------------------------------------------------------------------------
# Rule to build Doxygen documentation
#-------------------------------------------------------------------------------
doc:
	@DOXYGEN@ doxygen.conf
