################################################################################
# SPE top-level Makefile.am
################################################################################

SUBDIRS = bin

#setup:
#	$(call symlinks, "@abs_top_srcdir@/src", '.*\.h+?x+?')

#include @HOST_ACDIR@/config/utils.mk
